--- a/Gzip/Gzip.csproj
+++ b/Gzip/Gzip.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <AssemblyName>GzipTest</AssemblyName>
   </PropertyGroup>
 
 </Project>
